--- a/config/bootstrap/bootstrap-cli-config.yml
+++ b/config/bootstrap/bootstrap-cli-config.yml
@@ -23,6 +23,12 @@ bootstrap:
         - cdf-group: cdf:all:read
           idp-source-id: aa99fbc1-7761-42aa-941c-fb48789fe516
           idp-source-name: bootcamp-06-test-all-read
+        - cdf-group: cdf:uc:001:oee:owner
+          idp-source-id: 438d49a8-6cf2-4d27-af09-b7a86173f79a
+          idp-source-name: bootcamp-06-test-uc-001-oee-owner
+        - cdf-group: ccdf:uc:001:oee:read
+          idp-source-id: 80d996eb-6d4c-4ed3-bf12-455bfd5ed0a4
+          idp-source-name: bootcamp-06-test-all-read    
 
     - cdf-project: cdf-bootcamp-06-prod
       mappings:
@@ -35,6 +41,12 @@ bootstrap:
         - cdf-group: cdf:all:read
           idp-source-id: 8df79f02-111e-4e18-ae2c-da21cebec45e
           idp-source-name: bootcamp-06-prod-all-read
+        - cdf-group: cdf:uc:001:oee:owner
+          idp-source-id: f45c89ed-13d1-486f-a322-b0f38c71eec7
+          idp-source-name: bootcamp-06-prod-uc-001-oee-owner
+        - cdf-group: ccdf:uc:001:oee:read
+          idp-source-id: fc9af64f-5784-4850-ab6a-ece76d0b17cd
+          idp-source-name: bootcamp-06-prod-all-read   
 
   namespaces:
     # Typical config will have separate namespace by data source ("src") and use cases ("uc")
