--- a/.github/workflows/deploy-extpipes-cli.yaml
+++ b/.github/workflows/deploy-extpipes-cli.yaml
@@ -1,34 +1,34 @@
 ---
-name: deploy-extpipes-cli
+name: deploy-bootstrap-cli
 
 on:
     push:
         branches:
-            #- main
-            - none
+            - main
+            #- none
 
 jobs:
-    deploy_extpipes:
-        name: deploy extpipes-cli
+    bootstrap_cdf:
+        name: Bootstrap CDF
         runs-on: ubuntu-latest
         strategy:
             matrix:
                 environment: [test, prod]
                 include:
                     - environment: test
-                      # CDF cluster, like bluefield or greenfield
-                      CDF_CLUSTER: [CDF cluster]
+                      # CDF cluster, like bluefield, greenfield or westeurope-1
+                      CDF_CLUSTER: westeurope-1
                       # CDF Project name
-                      CDF_PROJECT: [CDF project]
+                      CDF_PROJECT: cdf-bootcamp-06-test
                       # Azure AD tenant id
-                      IDP_TENANT: [AAD tenant id]
+                      IDP_TENANT: 16e3985b-ebe8-4e24-9da4-933e21a9fc81
                     - environment: prod
                       # CDF cluster, like bluefield or greenfield
-                      CDF_CLUSTER: [CDF cluster]
+                      CDF_CLUSTER: westeurope-1
                       # CDF Project name
-                      CDF_PROJECT: [CDF project]
+                      CDF_PROJECT: cdf-bootcamp-06-prod
                       # Azure AD tenant id
-                      IDP_TENANT: [AAD tenant id]
+                      IDP_TENANT: 16e3985b-ebe8-4e24-9da4-933e21a9fc81
 
         environment: ${{ matrix.environment}}
         env:
@@ -36,17 +36,17 @@ jobs:
 
         steps:
             - uses: actions/checkout@v3
-            - uses: cognitedata/inso-extpipes-cli@main
+            - uses: cognitedata/inso-bootstrap-cli@main
               env:
-                  EXTPIPES_IDP_CLIENT_ID: ${{ secrets.CLIENT_ID }}
-                  EXTPIPES_IDP_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-                  EXTPIPES_CDF_HOST: ${{ env.CDF_HOST }}
-                  EXTPIPES_CDF_PROJECT: ${{ matrix.CDF_PROJECT }}
-                  EXTPIPES_IDP_TOKEN_URL: https://login.microsoftonline.com/${{ matrix.IDP_TENANT }}/oauth2/v2.0/token
-                  EXTPIPES_IDP_SCOPES: ${{ env.CDF_HOST }}.default
+                  BOOTSTRAP_IDP_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+                  BOOTSTRAP_CDF_HOST: ${{ env.CDF_HOST }}
+                  BOOTSTRAP_CDF_PROJECT: ${{ matrix.CDF_PROJECT }}
+                  BOOTSTRAP_IDP_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+                  BOOTSTRAP_IDP_TOKEN_URL: https://login.microsoftonline.com/${{ matrix.IDP_TENANT }}/oauth2/v2.0/token
+                  BOOTSTRAP_IDP_SCOPES: ${{ env.CDF_HOST }}.default
 
               with:
-                  # Path to extpipes cli configuration file
-                  config_file: ./config/extpipes/extpipes-cli-config.yml
+                  # Path to Bootstrap CLI configuration file
+                  config_file: ./config/bootstrap/bootstrap-cli-config.yml
             # "yes"|"no" deploy with special groups and aad_mappings
             #with_special_groups: "yes"
