--- a/.github/workflows/deploy-extpipes-cli.yaml
+++ b/.github/workflows/deploy-extpipes-cli.yaml
@@ -7,8 +7,8 @@ on:
             - main
 
 jobs:
-    bootstrap_cdf:
-        name: Bootstrap CDF
+    deploy_extpipes:
+        name: deploy extpipes-cli
         runs-on: ubuntu-latest
         strategy:
             matrix:
@@ -35,17 +35,17 @@ jobs:
 
         steps:
             - uses: actions/checkout@v3
-            - uses: cognitedata/inso-bootstrap-cli@main
+            - uses: cognitedata/inso-extipipes-cli@main
               env:
-                  BOOTSTRAP_IDP_CLIENT_ID: ${{ secrets.CLIENT_ID }}
-                  BOOTSTRAP_CDF_HOST: ${{ env.CDF_HOST }}
-                  BOOTSTRAP_CDF_PROJECT: ${{ matrix.CDF_PROJECT }}
-                  BOOTSTRAP_IDP_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-                  BOOTSTRAP_IDP_TOKEN_URL: https://login.microsoftonline.com/${{ matrix.IDP_TENANT }}/oauth2/v2.0/token
-                  BOOTSTRAP_IDP_SCOPES: ${{ env.CDF_HOST }}.default
+                  EXTPIPES_IDP_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+                  EXTPIPES_IDP_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+                  EXTPIPES_CDF_HOST: ${{ env.CDF_HOST }}
+                  EXTPIPES_CDF_PROJECT: ${{ matrix.CDF_PROJECT }}
+                  EXTPIPES_IDP_TOKEN_URL: https://login.microsoftonline.com/${{ matrix.IDP_TENANT }}/oauth2/v2.0/token
+                  EXTPIPES_IDP_SCOPES: ${{ env.CDF_HOST }}.default
 
               with:
-                  # Path to Bootstrap CLI configuration file
-                  config_file: ./config/bootstrap/bootstrap-cli-config.yml
+                  # Path to extpipes cli configuration file
+                  config_file: ./config/extpipes/extpipes-cli-config.yml
             # "yes"|"no" deploy with special groups and aad_mappings
             #with_special_groups: "yes"
