--- a/config/extpipes/extpipes-cli-config.yml
+++ b/config/extpipes/extpipes-cli-config.yml
@@ -48,13 +48,13 @@ rawdbs:
                       - name: Prashant
                         email: pchauhan4@slb.com
                         role: Bootcamp -6 Administrator
-                        send-notification: false
+                        send-notification: true
   # list of raw-dbs > containing rawtables > containing pipelines
     - rawdb-name: src:002:opcua:db
       dataset-external-id: src:002:opcua:ds
       short-name: opcua
       rawtables:
-          - rawtable-name: timeseries
+          - rawtable-name: datapoints
             pipelines:
         # source is a short-name identifying the pipeline source being
         # a 'db-extractor (db)', an 'Azure Function (az-func)',
@@ -65,4 +65,4 @@ rawdbs:
                       - name: Prashant
                         email: pchauhan4@slb.com
                         role: Bootcamp -6 Administrator
-                        send-notification: false                        
+                        send-notification: true                        
