--- a/config/transformations/create_asset_hierarchy/manifest.yaml
+++ b/config/transformations/create_asset_hierarchy/manifest.yaml
@@ -13,7 +13,7 @@ schedule:
     interval: 0 * * * *
     isPaused: true
 dataSetExternalId: src:001:sap:ds
-# Specify credentials separately like this:
+# Specify credentials sss separately like this:
 # authentication:
 #   read:
 #     clientId: ${READ_CLIENT_ID}
