--- a/config/transformations/ts_assets_mapping/manifest.yaml
+++ b/config/transformations/ts_assets_mapping/manifest.yaml
@@ -10,7 +10,7 @@ ignoreNullFields: true
 shared: true
 action: update
 dataSetExternalId: uc:001:oee:ds
-# Specify credentials separately like this:
+# Specify credentials ss separately like this:
 # authentication:
 #   read:
 #     clientId: ${READ_CLIENT_ID}
