--- a/config/transformations/create_asset_hierarchy/manifest.yaml
+++ b/config/transformations/create_asset_hierarchy/manifest.yaml
@@ -14,6 +14,7 @@ schedule:
     isPaused: true
 dataSetExternalId: src:001:sap:ds
 # Specify credentials sss separately like this:
+# dummy
 # authentication:
 #   read:
 #     clientId: ${READ_CLIENT_ID}
@@ -21,7 +22,7 @@ dataSetExternalId: src:001:sap:ds
 #     tokenUrl: ${READ_TOKEN_URL}
 #     cdfProjectName: ${READ_CDF_PROJECT_NAME}
 #     # Optional: If idP requires providing the scopes
-#     scopes: 
+#     scopes:
 #       - ${READ_SCOPES}
 #     # Optional: If idP requires providing the audience
 #     audience: ${READ_CDF_AUDIENCE}
@@ -31,7 +32,7 @@ dataSetExternalId: src:001:sap:ds
 #     tokenUrl: ${WRITE_TOKEN_URL}
 #     cdfProjectName: ${WRITE_CDF_PROJECT_NAME}
 #     # Optional: If idP requires providing the scopes
-#     scopes: 
+#     scopes:
 #       - ${WRITE_SCOPES}
 #     # Optional: If idP requires providing the audience
 #     audience: ${WRITE_CDF_AUDIENCE}
@@ -42,7 +43,7 @@ dataSetExternalId: src:001:sap:ds
 #   tokenUrl: ${TOKEN_URL}
 #   # Optional: If idP requires providing the scopes
 #   cdfProjectName: ${CDF_PROJECT_NAME}
-#   scopes: 
+#   scopes:
 #    - ${SCOPES}
 #   # Optional: If idP requires providing the audience
 #   audience: ${AUDIENCE}
@@ -54,4 +55,3 @@ authentication:
     cdfProjectName: ${CDF_PROJECT_NAME}
     scopes:
         - https://westeurope-1.cognitedata.com/.default
-
