--- a/config/transformations/ts_assets_mapping/manifest.yaml
+++ b/config/transformations/ts_assets_mapping/manifest.yaml
@@ -11,6 +11,7 @@ shared: true
 action: update
 dataSetExternalId: uc:001:oee:ds
 # Specify credentials ss separately like this:
+# Dummy
 # auth:
 #   read:
 #     clientId: ${READ_CLIENT_ID}
@@ -18,7 +19,7 @@ dataSetExternalId: uc:001:oee:ds
 #     tokenUrl: ${READ_TOKEN_URL}
 #     cdfProjectName: ${READ_CDF_PROJECT_NAME}
 #     # Optional: If idP requires providing the scopes
-#     scopes: 
+#     scopes:
 #       - ${READ_SCOPES}
 #     # Optional: If idP requires providing the audience
 #     audience: ${READ_CDF_AUDIENCE}
@@ -28,7 +29,7 @@ dataSetExternalId: uc:001:oee:ds
 #     tokenUrl: ${WRITE_TOKEN_URL}
 #     cdfProjectName: ${WRITE_CDF_PROJECT_NAME}
 #     # Optional: If idP requires providing the scopes
-#     scopes: 
+#     scopes:
 #       - ${WRITE_SCOPES}
 #     # Optional: If idP requires providing the audience
 #     audience: ${WRITE_CDF_AUDIENCE}
@@ -39,7 +40,7 @@ dataSetExternalId: uc:001:oee:ds
 #   tokenUrl: ${TOKEN_URL}
 #   # Optional: If idP requires providing the scopes
 #   cdfProjectName: ${CDF_PROJECT_NAME}
-#   scopes: 
+#   scopes:
 #    - ${SCOPES}
 #   # Optional: If idP requires providing the audience
 #   audience: ${AUDIENCE}
