--- a/.github/workflows/deploy-tranformations.yml
+++ b/.github/workflows/deploy-tranformations.yml
@@ -36,7 +36,7 @@ jobs:
         environment: ${{ matrix.environment}}
         env:
             CDF_HOST: https://${{ matrix.CDF_CLUSTER }}.cognitedata.com/
-            # Credentials to be used when running your transformations,
+            # Credentials too be used when running your transformations,
             # as referenced in in your manifests
             COGNITE_CLIENT_ID: ${{ secrets.CLIENT_ID }}
             COGNITE_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
