--- a/config/transformations/ts_assets_mapping/manifest.yaml
+++ b/config/transformations/ts_assets_mapping/manifest.yaml
@@ -1,8 +1,8 @@
 ---
 # Manifest file downloaded from fusion
-externalId: tr-ts_assets_mapping_ui
-name: ts_assets_mapping_ui
-query: >-
+externalId: tr-ts_assets_mapping
+name: ts_assets_mapping
+query:
     file: transformation.sql
 destination:
     type: timeseries
